maze.lessons.maze.island.IslandMaze.scala.error
Escaper:33: error: value North is not a member of object plm.universe.Direction
  if (getDirection == Direction.North && isFacingWall()){
                                ^